=========================
2004-05-31 16:34:47 v1_03
=========================

  2004-05-31 16:34:47 by rcaputo; Ping.pm 1.18

    Massively revised the documentation. I tried to look something up for
    Leigh Sharpe, and it was just a mess in there.
    
    Fixed cases where the user data was not passed through. Mostly during
    request errors. This is related to Leigh's question on POE's mailing
    list.
    
    Bumped the version number up for a CPAN release. 

=========================
2004-03-09 15:22:05 v1_02
=========================

  2004-03-09 15:22:05 by rcaputo; Ping.pm 1.17

    Boris Rekhtman reported a "hang" condition when addresses don't
    resolve. Thanks to his test case, it was tracked down to a leftover
    socket not being cleaned up if the ping failed early. This commit
    refactors the socket closure code, fixing his problem and at least
    one other. 

  2004-02-13 02:23:56 by rcaputo; Ping.pm 1.16

    Don't try to process a packet if recv() fails. 

=========================
2004-01-23 17:26:23 v1_01
=========================

  2004-01-23 17:26:23 by rcaputo; Ping.pm 1.15

    Bump the version number up. 

  2004-01-23 17:25:37 by rcaputo; MANIFEST 1.3; Ping.pm 1.14

    Improve sequence number tracking and cleanup. 

=========================
2003-12-07 17:57:58 v1_00
=========================

  2003-12-07 17:57:58 by rcaputo; Ping.pm 1.13

    Bump up the version! 

  2003-11-29 06:55:49 by rcaputo; Ping.pm 1.12; t/01_ping.t 1.6

    Applied Edward Henke's patch to correct a typo (and probably a memory
    leak) in a hash key. Also updated the test program with new ping
    targets, as the old ones seem to all be down for some reason. 

=========================
2003-09-04 05:57:33 v0_99
=========================

  2003-09-04 05:57:33 by rcaputo; Ping.pm 1.11

    "Jim" on Usenet discovered that the component doesn't clean up after
    a OneReply response. This means the component lingers forever,