@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         POE-Component-Client-Ping
-version:      1.03
+version:      1.04
 version_from: Ping.pm
 installdirs:  site
 requires:
