@@ -1,4 +1,12 @@
 =========================
+2004-05-31 17:24:07 v1_04
+=========================
+
+  2004-05-31 17:24:07 by rcaputo; Ping.pm 1.19
+
+    More documentation revisions. 
+
+=========================
 2004-05-31 16:34:47 v1_03
 =========================
 
